@@ -13,8 +13,8 @@
 		<h3><tt>ntpd</tt> - Network Time Protocol (NTP) daemon</h3>
 		<img src="pic/wingdorothy.gif" alt="gif" align="left"><a href="http://www.eecis.udel.edu/~mills/pictures.html">from <i>The Wizard of Oz</i>, L. Frank Baum</a>
 		<p>You need help from the monkeys.</p>
-		<p>Last update: July 5, 2008</p>
-		<br clear="left">
+		<p>Last update: <!-- #BeginDate format:En1m -->18-jun-09  19:45<!-- #EndDate --></p>
+<br clear="left">
 		<h4>Related Links</h4>
 		<script type="text/javascript" language="javascript" src="scripts/command.txt"></script>
 		<h4>Table of Contents</h4>
